--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "data",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "ts-node x.ts"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/node": "^10.12.19",
