--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/node": "^10.12.19",
     "hdf5": "^0.3.5",
+    "prettier": "^1.16.2",
     "ts-node": "^8.0.2",
     "typescript": "^3.2.4"
   }
